<resources>
    <string name="app_name">Inspect+</string>

    <string name="et_username_hint">Enter Your Username Here</string>
    <string name="et_password_hint">Enter Your Password Here</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_signup_text">Signup</string>
    <string name="action_settings">Settings</string>
    <string name="tv_contactus_text">Contact Us</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="title_activity_Login">Login Or Sign Up</string>

    <string name="create_new_account">Create New Account</string>
    <string name="et_name_hint">Enter Your Name Here</string>
    <string name="et_organisation_name_hint">Enter Your Organisation Name Here</string>
    <string name="et_title_hint">Enter Your Title Here</string>
    <string name="et_organisation_type_hint">Enter Your Organisation Type</string>
    <string name="et_address_hint">Enter Your Address</string>
    <string name="et_mobile_hint">Mobile</string>
    <string name="et_landline_hint">Landline</string>
    <string name="et_email_hint">Enter Your Email Address Here</string>
    <string name="et_card_num_hint">Enter Card Number</string>
    <string name="sp_cardtype_header">Select A Card Type</string>
    <string name="et_cvv_hint">Enter CVV</string>

    <string name="title_activity_account_settings">AccountSettingsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="tv_lbl_name">Name:</string>
    <string name="registeredprojects">Registered Projects</string>
</resources>
